# sprite-analyzer

./: .gitignore  .gitmodules  CMakeLists.txt
src/: ImageData.cpp  ImageData.h  debug.cpp  debug.h  geom.cpp  geom.h  main.cpp  parsers.cpp  parsers.h  png.cpp  png.h  util.cpp  util.h
